// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alert component should render correctly 1`] = `
<div
  className="alert variant--outlined color--error"
  data-severity="error"
  role="status"
  style={
    Object {
      "--color": "var(--color-error)",
    }
  }
>
  <div
    className="content"
  >
    <div
      className="message"
    >
      <strong
        className="label"
      >
        Error
        : 
      </strong>
      Alert
    </div>
    <div
      className="action"
    >
      <b
        size="small"
      >
        Action
      </b>
    </div>
  </div>
</div>
`;

exports[`alert component should work with different urgency variables 1`] = `
Array [
  <div
    className="alert variant--outlined"
    role="status"
    style={
      Object {
        "--color": "var(--color-default)",
      }
    }
  >
    <div
      className="content"
    >
      <div
        className="message"
      >
        polite
      </div>
    </div>
  </div>,
  <div
    className="alert variant--outlined"
    role="alert"
    style={
      Object {
        "--color": "var(--color-default)",
      }
    }
  >
    <div
      className="content"
    >
      <div
        className="message"
      >
        assertive
      </div>
    </div>
  </div>,
]
`;

exports[`alert component should work with different variants 1`] = `
Array [
  <div
    className="alert variant--default"
    role="status"
    style={
      Object {
        "--color": "var(--color-default)",
      }
    }
  >
    <div
      className="content"
    >
      <div
        className="message"
      >
        default
      </div>
    </div>
  </div>,
  <div
    className="alert variant--outlined"
    role="status"
    style={
      Object {
        "--color": "var(--color-default)",
      }
    }
  >
    <div
      className="content"
    >
      <div
        className="message"
      >
        outlined
      </div>
    </div>
  </div>,
  <div
    className="alert variant--contained"
    role="status"
    style={
      Object {
        "--color": "var(--color-default)",
      }
    }
  >
    <div
      className="content"
    >
      <div
        className="message"
      >
        contained
      </div>
    </div>
  </div>,
]
`;
